Added video list screen ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">VideoViewingApp</string>
+    <string name="music_trends">Музыкальные тренды</string>
 </resources>
