--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">VideoViewingApp</string>
     <string name="music_trends">Музыкальные тренды</string>
+    <string name="play">Воспроизведение</string>
+    <string name="pause">Пауза</string>
+    <string name="seek_10s">-10s</string>
+    <string name="seek_15s">+15s</string>
 </resources>
