--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="seek_10s">-10s</string>
     <string name="seek_15s">+15s</string>
     <string name="popular_now">Сейчас популярно</string>
+    <string name="try_again">Попробовать снова</string>
 </resources>
